--- a/src/Application.css
+++ b/src/Application.css
@@ -296,24 +296,37 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
 .banner button:hover svg {
     margin-left: 45px;
 }
-.banner img {
-    animation: updown 3s linear infinite;
-}
-@keyframes updown {
-    0% {
-        transform: translateY(-20px);
-    }
-    50% {
-        transform: translateY(20px);
-    }
-    100% {
-        transform: translateY(-20px);
-    }
-}
 .txt-rotate > .wrap {
     border-right: 0.08em solid #666;
 }
 
+.wrapper {
+    box-sizing: content-box;
+    height: 50px;
+    display: flex;
+}
+.words {
+    overflow: hidden;
+}
+.word {
+    font-size: 50px;
+    display: block;
+    height: 100%;
+    padding-top: 5px;
+    color: #fdfdfd;
+    animation: spin_words 6s infinite;
+}
+@keyframes spin_words {
+    10% {
+        transform: translateY(-112%);
+    }
+    30% {
+        transform: translateY(-100%);
+    }
+    50% {
+        transform: translateY(-212%);
+    }
+}
 /************ Skills Css ************/
 .skill {
     background: linear-gradient(#ffc8df, #ac82d4);
@@ -324,13 +337,14 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
     background: #eee6eb;
     border-radius: 64px;
     text-align: center;
-    padding: 60px 50px;
+    padding: 40px 50px;
     margin-top: -60px;
 }
-.skill h2 {
+.skill h1 {
     font-size: 45px;
     font-weight: 700;
-    color: rgba(74, 47, 189, 0.5);
+    color: rgb(4, 1, 17);
+    text-align: center;
 }
 .skill p {
     color: #0a041d;
@@ -348,24 +362,103 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
     width: 80%;
     margin: 0 auto 15px auto;
 }
+
+/* Slideshow */
+
+.slideshow {
+    margin: 0 auto;
+    overflow: hidden;
+    max-width: 500px;
+    padding-top: 10px;
+}
+.slideshowSlider {
+    white-space: nowrap;
+    transition: ease 1000ms;
+}
+
+.slide {
+    display: inline-block;
+    height: 400px;
+    width: 100%;
+    border-radius: 40px;
+}
+.slide-text {
+    font-size: 23px;
+    color: #fdfdfd;
+    text-align: center;
+    padding: 10px 0px 10px 0px;
+}
+.slide-image {
+    width: 10%;
+    padding-top: 20px;
+}
+/* Buttons */
+.slideshowDots {
+    text-align: center;
+}
+.slideshowDot {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin: 15px 7px 0px;
+    background-color: #c4c4c4;
+}
+
+.slideshowDot.active {
+    background-color: #6a0dad;
+}
 /************ Experience Css ************/
 .experience {
     background: linear-gradient(#ac82d4, #07010e);
     padding: 0 0 50px 0;
     position: relative;
+    height: 100vh;
+    display: flex;
+    padding: 0 4em;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
-
-.experience h3 {
-    font-size: 30px;
-    font-weight: 700;
-    color: rgb(104, 20, 153);
+/*card*/
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 0.25rem;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0);
+    transform-style: preserve-3d;
+    transition: 150ms;
+    cursor: pointer;
+    transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0));
+    background: linear-gradient(to right, #a246ef, #6523fe);
 }
-.experience p {
-    color: #edecf1;
-    font-size: 18px;
-    letter-spacing: 0.8px;
-    line-height: 1.5em;
-    margin: 14px 0 75px 0;
+.card:hover {
+    --translate-y: -2px;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+    opacity: 1;
+}
+.card.flip {
+    --rotate-y: 180deg;
+}
+.card .front,
+.card .back {
+    height: 100%;
+    width: 100%;
+    transform-style: preserve-3d;
+    text-align: center;
+    border-radius: 0.4em;
+    top: 0;
+    bottom: 0;
+    backface-visibility: hidden;
+    height: 200px;
+    width: 300px;
+}
+.card .back {
+    transform: rotateY(180deg);
+    background-color: rgb(19, 19, 19);
 }
 
 /************ Resume Css ************/
