--- a/src/Application.css
+++ b/src/Application.css
@@ -243,11 +243,19 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon:before {
 nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
     border-color: transparent;
 }
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    background-image: url('./assets/img/me.jpg');
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
 
 /************ Banner Css ************/
 .banner {
     margin-top: 0;
-    padding: 300px 0 300px 0;
+    padding: 250px 0 150px 0;
     background-image: url('./assets/img/backgroundClouds.jpg');
     background-position: top center;
     background-size: cover;
@@ -276,7 +284,13 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
     font-size: 18px;
     letter-spacing: 0.8px;
     line-height: 1.5em;
-    width: 96%;
+    width: 100%;
+}
+.blurb {
+    border-style: solid;
+    border-color: #dcbce4;
+    border-width: 3px;
+    padding: 10px 10px;
 }
 .banner button {
     color: #fff;
@@ -341,26 +355,10 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
     margin-top: -60px;
 }
 .skill h1 {
-    font-size: 45px;
+    font-size: 50px;
     font-weight: 700;
     color: rgb(4, 1, 17);
     text-align: center;
-}
-.skill p {
-    color: #0a041d;
-    font-size: 18px;
-    letter-spacing: 0.8px;
-    line-height: 1.5em;
-    margin: 14px 0 75px 0;
-}
-.skill-slider {
-    width: 80%;
-    margin: 0 auto;
-    position: relative;
-}
-.skill-slider .item img {
-    width: 80%;
-    margin: 0 auto 15px auto;
 }
 
 /* Slideshow */
@@ -384,13 +382,16 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
 }
 .slide-text {
     font-size: 23px;
-    color: #fdfdfd;
+    color: #180b16;
     text-align: center;
     padding: 10px 0px 10px 0px;
 }
-.slide-image {
-    width: 10%;
-    padding-top: 20px;
+.slide-img {
+    padding-left: 23%;
+    padding-top: 30px;
+    height: 300px;
+    width: auto;
+    border-radius: 75px / 175px / 75px/ 175px;
 }
 /* Buttons */
 .slideshowDots {
@@ -421,6 +422,12 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
     justify-content: space-around;
     align-items: center;
 }
+
+.experience h1 {
+    text-align: center;
+    color: #000;
+    font-size: 50px;
+}
 /*card*/
 .card {
     display: flex;
@@ -429,36 +436,14 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
     position: relative;
     border-radius: 0.25rem;
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0);
-    transform-style: preserve-3d;
-    transition: 150ms;
-    cursor: pointer;
-    transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0));
     background: linear-gradient(to right, #a246ef, #6523fe);
 }
-.card:hover {
-    --translate-y: -2px;
-    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
-    opacity: 1;
-}
-.card.flip {
-    --rotate-y: 180deg;
-}
-.card .front,
-.card .back {
-    height: 100%;
-    width: 100%;
-    transform-style: preserve-3d;
+.card h2 {
     text-align: center;
-    border-radius: 0.4em;
-    top: 0;
-    bottom: 0;
-    backface-visibility: hidden;
-    height: 200px;
-    width: 300px;
 }
-.card .back {
-    transform: rotateY(180deg);
-    background-color: rgb(19, 19, 19);
+.description {
+    background-color: rgb(253, 246, 252);
+    color: #000;
 }
 
 /************ Resume Css ************/
@@ -554,80 +539,20 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
 }
 
 /************ Footer Css ************/
-/* .footer {
+.footer {
     padding: 0 0 50px 0;
-    background-image: url('./assets/img/footer-bg.png');
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: rgb(255, 196, 248);
 }
-.newsletter-bx {
-    background: #ffffff;
-    border-radius: 55px;
-    color: #121212;
-    padding: 85px 125px;
-    margin-bottom: 80px;
-    margin-top: -122px;
+.footer .social-icon {
+    padding-left: 35%;
+    padding-top: 15px;
 }
-.newsletter-bx h3 {
-    font-weight: 700;
-    letter-spacing: 0.5px;
-    line-height: 1.2em;
+.footer a:link {
+    color: purple;
 }
-.new-email-bx {
-    background: #fff;
-    padding: 5px;
-    border-radius: 20px;
-    position: relative;
-    z-index: 0;
-    display: flex;
-    align-items: center;
+.footer a:hover {
+    color: #dcbce4;
 }
-.new-email-bx::before {
-    content: '';
-    background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
-    border-radius: 20px;
-    position: absolute;
-    z-index: -1;
-    top: -1px;
-    left: -1px;
-    bottom: -1px;
-    right: -1px;
-}
-.new-email-bx::after {
-    content: '';
-    background: #fff;
-    border-radius: 20px;
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-.new-email-bx input {
-    width: 100%;
-    color: #121212;
-    font-weight: 500;
-    background: transparent;
-    border: 0;
-    padding: 0 15px;
-}
-.new-email-bx button {
-    background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
-    padding: 20px 65px;
-    color: #fff;
-    font-weight: 500;
-    letter-spacing: 0.5px;
-    border-radius: 18px;
-}
-.footer img {
-    width: 26%;
-}
-.footer p {
-    font-weight: 400;
-    font-size: 14px;
-    color: #b8b8b8;
-    letter-spacing: 0.5px;
-    margin-top: 20px;
-} */
