--- a/src/Application.css
+++ b/src/Application.css
@@ -430,22 +430,21 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
 }
 /*card*/
 .card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    border-radius: 0.25rem;
-    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0);
-    background: linear-gradient(to right, #a246ef, #6523fe);
+    height: 350px;
+    width: 350px;
+    border-radius: 50%;
+    background: linear-gradient(#e6e1eb, #aa81d8);
 }
 .card h2 {
     text-align: center;
+    color: #000000;
 }
-.description {
-    background-color: rgb(253, 246, 252);
-    color: #000;
+.card h2:hover {
+    color: #ac82d4;
 }
-
+.card p {
+    text-align: center;
+}
 /************ Resume Css ************/
 .resume {
     background: linear-gradient(#ac82d4, #07010e);
