--- a/src/Application.css
+++ b/src/Application.css
@@ -281,6 +281,7 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
 }
 .banner p {
     color: #5a054c;
+    background-color: #fdfcfc;
     font-size: 18px;
     letter-spacing: 0.8px;
     line-height: 1.5em;
